prevent page scroll on mobile

--- a/src/client/style/main.css
+++ b/src/client/style/main.css
@@ -14,6 +14,11 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 *,
@@ -33,27 +38,23 @@ main {
   max-width: 66em;
 }
 
-section {
+.editor-wrapper {
   display: flex;
   flex-grow: 1;
   margin: 7px;
 }
 
-.layer {
+.paper {
   display: flex;
   flex-grow: 1;
   margin: -3px -3px 1px -3px;
   background-color: white;
   border-radius: 4px;
   border: 1px solid #ddd;
-  box-shadow: 0px 0px 5px 0px #e4e4e4;
-}
-
-section > .layer {
   box-shadow: 0px 0px 1px 0px #a9a9a9;
 }
 
-header {
+.status {
   display: flex;
   height: 4em;
   align-items: flex-end;
@@ -62,26 +63,26 @@ header {
 }
 
 @media (max-width: 700px) {
-  header {
+  .status {
     height: 2em;
   }
 }
 
-#save-status {
+.save-status {
   color: #84878c;
   opacity: 0;
   transition: opacity 0.5s 0.5s;
 }
-#save-status.is-active {
+.save-status.is-active {
   opacity: 1;
   transition: opacity 0s;
 }
 
-#network-status {
+.network-status {
   color: orangered;
 }
 
-#editor {
+.editor {
   display: flex;
   flex-grow: 1;
   border-radius: 3px;
@@ -96,7 +97,7 @@ header {
 }
 
 @media (max-width: 700px) {
-  #editor {
+  .editor {
     padding: 1em 1em;
   }
 }
